[package]
name = "ta-lib-in-rust"
version = "1.0.4"
edition = "2021"
description = "A library of technical indicators for financial analysis, similar to TA-Lib"
authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
license = "MIT"
repository = "https://github.com/rustic-ml/ta-lib-in-rust"
# Add homepage, often same as repository if no separate project page
homepage = "https://github.com/rustic-ml/ta-lib-in-rust"
documentation = "https://docs.rs/ta-lib-in-rust"
readme = "README.md"
keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
# Add relevant categories for discoverability
categories = ["algorithms", "mathematics"]
# Add the 'exclude' field here
exclude = [
    # Add the folder you want to exclude.
    # Use a trailing slash '/' to ensure it's treated as a directory.
    "examples/",
    "target/",

    ".gitignore",
    "Cargo.lock",
    "images.png",

    # You can add more patterns:
    # "another_folder/",
    # "*.log",             # Exclude all .log files
]

[dependencies]
polars = { version = "0.46.0", features = ["lazy", "strings", "temporal", "rolling_window"] }
chrono = "0.4.34"
thiserror = "2.0.11" # Consider updating if needed, check compatibility
ndarray = "0.16.1" # Consider updating if needed, check compatibility
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"