[package]
name = "rustalib"
version = "1.0.7"
edition = "2021"
description = "A library of technical indicators for financial analysis, similar to TA-Lib"
authors = ["Celsis Durham <durhamcelsis@gmail.com>"]
license = "MIT"
repository = "https://github.com/rustic-ml/RusTaLib"
# Add homepage, often same as repository if no separate project page
homepage = "https://github.com/rustic-ml/RusTaLib"
documentation = "https://docs.rs/rustalib"
readme = "README.md"
keywords = ["finance", "technical-analysis", "trading", "indicators", "stocks"]
# Add relevant categories for discoverability
categories = ["algorithms", "mathematics"]
# Add the 'exclude' field here
exclude = [
    # Add the folder you want to exclude.
    # Use a trailing slash '/' to ensure it's treated as a directory.
    "examples/",
    "target/",
    "src/test/",

    ".gitignore",
    "Cargo.lock",
    "images_processed.png",

    # You can add more patterns:
    # "another_folder/",
    # "*.log",             # Exclude all .log files
]

[dependencies]
polars = { version = "0.47.1", features = ["lazy", "strings", "temporal", "rolling_window", "parquet", "dtype-categorical", "dtype-struct"] }
chrono = "0.4.34"
thiserror = "2.0.11" # Consider updating if needed, check compatibility
ndarray = "0.16.1" # Consider updating if needed, check compatibility
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.10.1"

# General examples
[[example]]
name = "general_basic_indicators"
path = "examples/general/basic_indicators.rs"

# Stock market strategy examples
[[example]]
name = "stock_trend_following"
path = "examples/stock/trend_following.rs"

[[example]]
name = "stock_mean_reversion"
path = "examples/stock/mean_reversion.rs"

# Options trading strategy examples
[[example]]
name = "options_vertical_spreads"
path = "examples/options/vertical_spreads.rs"

[[example]]
name = "options_iron_condor"
path = "examples/options/iron_condor.rs"

# Basic indicators examples
[[example]]
name = "bollinger_bands_basic"
path = "examples/bollinger_bands_basic.rs"

[[example]]
name = "macd_basic"
path = "examples/macd_basic.rs"

[[example]]
name = "moving_averages_basic"
path = "examples/moving_averages_basic.rs"

[[example]]
name = "rsi_basic"
path = "examples/rsi_basic.rs"

[[example]]
name = "vwap_basic"
path = "examples/vwap_basic.rs"

[[example]]
name = "working_with_multi_stock_data"
path = "examples/working_with_multi_stock_data.rs"

[[example]]
name = "file_reading_example"
path = "examples/file_reading_example.rs"